# information_security

./: Makefile  task.md
.github/workflows/: ci.yaml
1/: Makefile  file.txt  file_to_encrypt_rsa.txt
2/: Makefile  file_to_sign.txt
3/: Makefile
5/: CMakeLists.txt  Makefile  main.cpp
6/: CMakeLists.txt  Makefile  main.cpp
